# arroyo

./: .gitignore
.github/workflows/: ci.yml
blizzard/: Cargo.toml  orderbooks-config.yaml
blizzard/.claude/: settings.local.json
blizzard/benches/: bench_utils.rs  blizzard_benchmarks.rs
blizzard/src/: config.rs  internal_events.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  storage.rs  utilization.rs
blizzard/src/checkpoint/: mod.rs  state.rs
blizzard/src/config/: mod.rs
blizzard/src/pipeline/: tasks.rs
blizzard/src/sink/: delta.rs  mod.rs  multipart.rs  parquet.rs
blizzard/src/source/: mod.rs  reader.rs  state.rs
blizzard/tests/: integration_test.rs
crates/arroyo-connectors/src/nats/: mod.rs
crates/arroyo-connectors/src/nats/source/: mod.rs
