[package]
name = "blizzard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A standalone tool for streaming NDJSON.gz files to Delta Lake with checkpoint-based recovery"
license = "MIT OR Apache-2.0"

# This makes the package standalone, not part of the arroyo workspace
[workspace]

[dependencies]
# Arrow ecosystem
arrow = { version = "55", features = ["chrono-tz"] }
arrow-json = "55"
parquet = { version = "55", features = ["async"] }

# Delta Lake
deltalake = { version = "0.30", features = ["s3", "gcs", "azure"] }

# Object storage
object_store = { version = "0.12.5", features = ["aws", "gcp", "azure"] }
aws-config = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
futures = "0.3"

# Parallel processing
rayon = "1.10"
flate2 = "1"
zstd = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing and glob matching
url = "2"
regex = "1"
glob = "0.3"

# Misc
bytes = "1"
uuid = { version = "1", features = ["v7"] }
chrono = "0.4"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
axum = "0.8"

[dev-dependencies]
tempfile = "3.24.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"
flate2 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rayon = "1.10"
bytes = "1"

[[bench]]
name = "blizzard_benchmarks"
harness = false

[patch.crates-io]
object_store = { git = "https://github.com/benjamin-awd/arrow-rs-object-store", branch = "0.12.5/gcs-content-length" }
